# algo-trader

./: .gitignore  .pylintrc  .rayignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
algo_trader/: errors.py  main.py
algo_trader/application/: __init__.py  data_io.py  data_sources.py  feature_catalog.py  json_support.py  pipeline_utils.py  signal_metrics.py  yaml_support.py
algo_trader/cli/: __init__.py  ib_hist_cuncurrency.bak  ib_hist_cuncurrency.py  main.py  wizard.py
algo_trader/domain/: __init__.py  asset_blocks.py  errors.py
algo_trader/historical_data/: __init__.py  config.py  env.py  factory.py  ib_hist_cuncurrency.py  ib_hist_event_parallel.py  ib_hist_multi_thread.py  models.py  protocols.py  runner.py
algo_trader/infrastructure/: __init__.py  env.py  logging.py  output.py  paths.py  torch_device.py
algo_trader/pipeline/: __init__.py
algo_trader/preprocessing/: __init__.py  identity.py  pca.py  protocols.py  registry.py  validation.py  zscore.py
algo_trader/providers/: __init__.py
config/: tickers.example.yml
docs/pyro/: tricks.md
scripts/: check_gpu.sh  download_historical_months.sh  show_feature_tensor.sh  show_return_tensor.sh
tests/: test_asset_blocks.py  test_cpcv.py  test_cross_sectional_group.py  test_data_cleaning.py  test_data_processing.py  test_exogenous_cleaning.py  test_exogenous_config.py  test_exogenous_feature_engineering.py  test_exogenous_runner.py  test_feature_catalog.py  test_feature_store_panel_dataset.py  test_feature_store_split_dataset.py  test_fred_provider.py  test_historical_export.py  test_ib_request_registry.py  test_ibkr_reset_window.py  test_l10_online_filtering_learning.py  test_level10_runtime_registration.py  test_main.py  test_modeling_inference.py  test_preprocessing_pca.py  test_preprocessing_zscore.py  test_regime_group.py  test_seasonal_group.py  test_signal_metrics.py  test_smoke_test.py  test_torch_device.py  test_v11_runtime_registration.py  test_v12_runtime_registration.py  test_v13_runtime_registration.py  test_v14_runtime_registration.py  test_v15_runtime_registration.py  test_v16_runtime_registration.py  test_v17_runtime_registration.py  test_v18_runtime_registration.py  test_v19_runtime_registration.py  test_volatility_group.py  test_wizard.py
tests/research/: observation_support.py  regime_study_test_support.py  test_basket_consistency_postmortem.py  test_curated_pair_stability_study.py  test_hybrid_measurement_postmortem.py  test_index_feature_study.py  test_index_measurement_study.py  test_index_representation_study.py  test_index_subset_study.py  test_index_target_study.py  test_index_universe_study.py  test_lagged_reduced_index_regime_study.py  test_model_selection_adjusted_study.py  test_pair_postmortem_study.py  test_pair_state_study.py  test_pairwise_index_study.py  test_posterior_signal_seed_stability.py  test_posterior_signal_study.py  test_reduced_index_regime_study.py  test_reduced_universe_model_comparison_study.py  test_residual_copula_study.py  test_state_conditioned_measurement_postmortem.py
tests/simulation/: helpers.py  test_allocation.py  test_basket_diagnostics.py  test_block_scoring_output.py  test_config.py  (+54 more)
(+595 files in other folders)
