[project]
name = "algo-trader"
version = "0.1.0"
description = "Application for managing a complete trading system."
authors = [{ name = "Raimondo Marino", email = "raimondo.marino69@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibapi>=9.81.1.post1",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algo_trader"]

[project.scripts]
algo-trader = "algo_trader.main:main"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
    "pylint>=4.0.4",
    "pyright>=1.1.408",
    "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
